...
            size={24}
            color={theme.colors.onSurface}
          />
          <Text
            variant="bodySmall"
            style={{ fontFamily: "Nunito-Bold", color: theme.colors.onSurface }}
            testID="create-button"
          >
            Create
          </Text>
        </Pressable>
      </View>

...
