...
          size={24}
          color={theme.colors.primary}
          style={styles.icon}
          onPress={() => router.push("/settings")}
        />
        <Text variant="body" style={styles.title}>
          My Mind
        </Text>
        <Pressable onPress={toggleSearch} style={styles.searchIcon}>
          <Ionicons
            name={isSearchVisible ? "close" : "search"}
            size={24}
            color={theme.colors.primary}
...
